# ngx_wasm_module

./: .actrc  .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  WORKSPACE  asan.ignore  asan.suppress  codecov.yml  config  dependabot.yml  valgrind.supp  valgrind.suppress
.github/: dependabot.yml
.github/actions/: codeql-config.yml
.github/workflows/: bazel.yml  ci-large.yml  ci.yml  clang-analyzer.yml  codeql.yml  daily.yml  job-build-tests.yml  job-clang-analyzer.yml  job-codeql-analyzer.yml  job-unit-tests.yml  job-valgrind-tests.yml  main.yml  push.yml  release-nightly.yml  release.yml  unit-tests.yml  unit.yml  valgrind.yml
assets/: INTERNAL_DIFFERENCES.md
assets/adr/: 003-proxy-wasm-gateway-plugin.md  004-2d-threads.md  004-shm.md
assets/ci/: Dockerfile.nginx  nginx.conf
assets/release/: INSTALL  README  nginx.conf
auto/: cargo  runtime
bridges/v8/: Makefile  bridge.cc  bridge.h
docs/: CONTRIBUTING.md  DEVELOPER.md  DIRECTIVES.md  INSTALL.md  METRICS.md  PROXY_WASM.md  PROXY_WASM_HOST_DIFFERENCES.md  README.md  SLRU.md
docs/adr/: 000-template.md  001-proxy-wasm-gateway-embedding.md  002-proxy-wasm-abi.md  003-proxy-wasm-gateway-plugin.md  005-metrics.md  005-wasm-runtimes-flags.md
lib/: Cargo.toml
lib/cwabt/: Cargo.toml  Makefile  cwabt.h
lib/jscbridge/: Makefile  bridge.c  bridge.h
lib/ngx-rust/: Cargo.toml
lib/ngx-wasm-rs/: Cargo.toml
lib/ngx-wasm-rs/include/: ngx_wasm_backtrace.h  ngx_wasm_wat.h
lib/ngx-wasm-rs/lib/backtrace/: Cargo.toml  README.md
lib/ngx-wasm-rs/lib/backtrace/src/: backtrace.rs  c_api.rs  lib.rs
lib/ngx-wasm-rs/lib/c-api/: Cargo.toml
lib/ngx-wasm-rs/lib/c-api/src/: lib.rs
lib/ngx-wasm-rs/lib/wat/: Cargo.toml  README.md
lib/ngx-wasm-rs/lib/wat/src/: lib.rs
lib/ngx-wasm-rs/src/: lib.rs
lib/resty/: proxy_wasm.lua  wasm.lua  wasmx.lua
lib/v8bridge/: Makefile  bridge.cc  bridge.h
misc/: README  nginx.conf
src/: ddebug.h  ngx_http_proxy_wasm_module.c  ngx_wasm.c  ngx_wasm.h  ngx_wasm_common.h  ngx_wasm_hfuncs.c  ngx_wasm_hfuncs.h  ngx_wasm_hostfuncs.c  ngx_wasm_hostfuncs.h  ngx_wasm_module.c  ngx_wasm_module.h  ngx_wasm_vm.c  ngx_wasm_vm.h  ngx_wasm_vm_cache.c  ngx_wasm_vm_cache.h  ngx_wasm_wasmtime.c  ngx_wasm_wasmtime.h  ngx_wasmx.c  ngx_wasmx.h
src/common/: ddebug.h  ngx_wa_readers.c  ngx_wa_readers.h  ngx_wasm_ffi.c  ngx_wasm_ffi.h  ngx_wasm_lua.c  ngx_wasm_lua.h  ngx_wasm_lua_resolver.c  ngx_wasm_lua_resolver.h  ngx_wasm_phase_engine.c  ngx_wasm_phase_engine.h  ngx_wasm_phases.c  ngx_wasm_phases.h  ngx_wasm_socket_tcp.c  ngx_wasm_socket_tcp.h  ngx_wasm_socket_tcp_readers.c  ngx_wasm_socket_tcp_readers.h  ngx_wasm_ssl.c  ngx_wasm_ssl.h  ngx_wasm_subsystem.c  ngx_wasm_subsystem.h  ngx_wasm_util.c  ngx_wasm_util.h
src/http/: ngx_http_proxy_wasm_module.c  ngx_http_wasm.h  ngx_http_wasm_directives.c  ngx_http_wasm_escape.c  ngx_http_wasm_filter_module.c  ngx_http_wasm_headers.c  ngx_http_wasm_headers.h  ngx_http_wasm_headers_request.c  ngx_http_wasm_headers_response.c  ngx_http_wasm_headers_shims.c  ngx_http_wasm_hfuncs_module.c  ngx_http_wasm_host.c  ngx_http_wasm_local_response.c  ngx_http_wasm_module.c  ngx_http_wasm_module.h  ngx_http_wasm_trailers.h  ngx_http_wasm_trailers_response.c  ngx_http_wasm_util.c  ngx_http_wasm_util.h
src/ipc/: ngx_ipc.c  ngx_ipc.h  ngx_ipc_core_module.c
src/stream/: ngx_stream_wasm.h  (+1 more)
t/: 001-wasm-conf-block.t  001-wasm_conf_block.t  TestBuild.pm  TestWasm.pm  TestWasmX.pm  x.t
t/lib/: Cargo.toml
t/lib/ngx-lua-tests/: Cargo.toml
t/lib/ngx-lua-tests/src/: lib.rs  lua_bridge.rs
t/lib/ngx-rust-tests/: Cargo.toml
t/lib/ngx-rust-tests/src/: filter.rs  lib.rs  test_wasi.rs
t/lib/proxy-wasm-tests/benchmarks/: Cargo.toml
t/lib/proxy-wasm-tests/benchmarks/src/: fannkuch_redux.rs  filter.rs
t/lib/proxy-wasm-tests/context-checks/: Cargo.toml
t/lib/proxy-wasm-tests/context-checks/src/: hostcalls.rs  lib.rs
t/lib/proxy-wasm-tests/hostcalls/: Cargo.toml
t/lib/proxy-wasm-tests/hostcalls/src/: callouts.rs  dispatch.rs  echo.rs  filter.rs  lib.rs  test_cases.rs
t/lib/proxy-wasm-tests/hostcalls/src/foreign_callbacks/: mod.rs
t/lib/proxy-wasm-tests/hostcalls/src/tests/: echo.rs  host.rs  mod.rs
t/lib/proxy-wasm-tests/hostcalls/src/types/: mod.rs  test_http.rs  test_root.rs
t/lib/proxy-wasm-tests/instance-lifecycle/: Cargo.toml
t/lib/proxy-wasm-tests/instance-lifecycle/src/: filter.rs
t/lib/proxy-wasm-tests/on-phases/: Cargo.toml
t/lib/proxy-wasm-tests/on-phases/src/: filter.rs  lib.rs
t/lib/proxy-wasm-tests/on-tick/: Cargo.toml
t/lib/proxy-wasm-tests/on-tick/src/: filter.rs  lib.rs
t/lib/proxy-wasm-tests/on-vm-start/: Cargo.toml
t/lib/proxy-wasm-tests/on-vm-start/src/: filter.rs
t/lib/proxy-wasm-tests/rust-sdk-ver-zero-one/: Cargo.toml
t/lib/proxy-wasm-tests/rust-sdk-ver-zero-one/src/: filter.rs
t/lib/rust-http-tests/: Cargo.toml
t/lib/rust-http-tests/src/: hostcalls.rs  lib.rs
t/lib/rust-tests/: Cargo.toml
t/lib/rust-tests/ngx-rust-tests/: Cargo.toml
t/lib/rust-tests/proxy-wasm/hello-world/: Cargo.toml
t/lib/rust-tests/proxy-wasm/hostcalls/: Cargo.toml
t/lib/rust-tests/proxy-wasm/hostcalls/src/: echo.rs  lib.rs  test_cases.rs
t/lib/rust-tests/proxy-wasm/on-http-phases/: Cargo.toml
t/lib/rust-tests/proxy-wasm/on-http-phases/src/: lib.rs
t/lib/rust-tests/proxy-wasm/on-phases/: Cargo.toml
t/lib/rust-tests/proxy-wasm/on-phases/src/: lib.rs
t/lib/rust-tests/proxy-wasm/on-req-headers/: Cargo.toml
t/lib/rust-tests/proxy-wasm/on-req-headers/src/: lib.rs
t/lib/rust-tests/proxy-wasm/on-tick/: Cargo.toml
t/lib/rust-tests/proxy-wasm/on-tick/src/: lib.rs
t/lib/wasi-host-tests/: Cargo.toml
t/lib/wasi-host-tests/src/: lib.rs
t/lib/wasi-vm-tests/: Cargo.toml
t/lib/wasi-vm-tests/src/: lib.rs
util/: _lib.sh  build.sh  build_proxy_wasm_go_sdk.sh  changelog.sh  clean.sh  morestyle.pl  parse-valgrind.awk  reindex.sh  release.sh  runtime.sh  sdk.sh  setup_dev.sh  setup_proxy_wasm_go_sdk.sh  style.pl  style.sh  test.sh
(+569 files in other folders)
