[workspace]
members = [
    "lib/ngx-rust",
    "t/lib/ngx-rust-tests",
    "t/lib/ngx-lua-tests",
    "t/lib/wasi-vm-tests",
    "t/lib/wasi-host-tests",
    "t/lib/proxy-wasm-tests/on-tick",
    "t/lib/proxy-wasm-tests/on-phases",
    "t/lib/proxy-wasm-tests/hostcalls",
    "t/lib/proxy-wasm-tests/rust-sdk-ver-zero-one",
    "t/lib/proxy-wasm-tests/benchmarks",
    "t/lib/proxy-wasm-tests/instance-lifecycle",
]
exclude = [
    "lib/ngx-wasm-rs",
]
