[package]
name = "rust-http-tests"
version = "0.1.0"
authors = ["Thibault Charbonnier <thibaultcha@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]
name = "rust_tests"
path = "src/lib.rs"
