[package]
name = "hostcalls"
version = "0.1.0"
authors = ["Thibault Charbonnier <thibaultcha@me.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = { git = "https://github.com/kong/proxy-wasm-rust-sdk.git", branch = "main" }
log = "0.4"
http = "1.2"
enum-utils = "0.1.2"
urlencoding = "2.1.2"
